FIX attempt for jarring scrolling effect on mobile 18

--- a/projects/work 1/Deadspace (2008)/css/deadspace_common.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_common.css
@@ -37,7 +37,7 @@ main div {
   height: 100vh;
   align-content: center;
   padding: 0 8vw;
-  background-color: orange;
+  background-color: teal;
 }
 div.half {
   height: 30vh;
