--- a/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
@@ -27,7 +27,10 @@ p {
   font-size: 0.9rem;
 }
 .parallax {
+  position: relative;
   width: 100%;
+  top: 0px;
+  left: 0px;
 }
 .plasma-cutter {
   max-width: none;
